Fix Java 17 compatibility issues
Co-authored-by: Deena-dkt <107837944+Deena-dkt@users.noreply.github.com>